[gd_scene load_steps=2 format=3 uid="uid://bbn3gyuudp2qf"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_n2tq6"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_n2tq6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayGame_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "TEADSADA"

[node name="Quit_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="BackGround_Music" type="AudioStreamPlayer" parent="."]

[node name="ButtonClick_SFX" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/PlayGame_Button" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
